--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,24 @@
-# === Core Data Science ===
 numpy
 pandas
 scipy
-scikit-learn
 matplotlib
 seaborn
+scikit-learn
 
-# === MLOps Tools ===
+# DVC + S3 estable
+dvc[s3]==3.63.0
+boto3<1.40.20
+botocore<1.40.20
+s3transfer<0.14.0
+
+cookiecutter
+pytest
+fastapi
+uvicorn
 mlflow
-dvc[s3]           # DVC con soporte para AWS S3
-boto3             # SDK oficial de AWS
-python-dotenv     # Cargar variables de entorno (.env)
-
-# === Experiment Tracking / Validation ===
 evidently
 sdv
 deepchecks
 
-# === Web & Deployment ===
-fastapi
-uvicorn[standard]
-
-# === Dev & Testing ===
-cookiecutter
-pytest
-
-# === Notebook Environment ===
+# útil para el equipo
 jupyterlab
-ipykernel
