--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,13 @@ scipy
 matplotlib
 seaborn
 scikit-learn
-
-# DVC + S3 estable
-dvc[s3]==3.63.0
-boto3<1.40.20
-botocore<1.40.20
-s3transfer<0.14.0
-
 cookiecutter
 pytest
 fastapi
 uvicorn
 mlflow
 evidently
-sdv
-deepchecks
-
-# útil para el equipo
-jupyterlab
+# DVC y S3 van en Dockerfile para asegurar versión consistente:
+# dvc[s3]
+# boto3
+# s3fs
